experiment with available devices code

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>libjitsi</module>
         <module>qavreceivetransmit</module>
+        <module>qavailablemediadevices</module>
     </modules>
 
     <name>QNEAV</name>
