--- a/pom.xml
+++ b/pom.xml
@@ -7,64 +7,47 @@
     <groupId>net.qnenet</groupId>
     <artifactId>qneav</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <modules>
         <module>qavreceivetransmit</module>
         <module>qavailablemediadevices</module>
         <module>qavfeatures</module>
+        <module>qaudiochannel</module>
+        <module>qvideochannel</module>
     </modules>
 
     <name>QNEAV</name>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <karaf.version>4.3.0.RC1</karaf.version>
+        <vaadin.version>14.3.4</vaadin.version>
+        <vaadin.flow.version>2.3.4</vaadin.flow.version>
+        <osgi.version>7.0.0</osgi.version>
+        <osgi.compatability.mode.version>${vaadin.flow.version}</osgi.compatability.mode.version>
+        <osgi.bundle.version>${project.version}</osgi.bundle.version>
 
-        <qne.version>1.0-SNAPSHOT</qne.version>
+        <javax.servlet.version>3.1.0</javax.servlet.version>
 
-        <karaf.version>4.2.8</karaf.version>
-        <osgi.version>6.0.0</osgi.version>
-        <netty-all.version>4.1.36.Final</netty-all.version>
+        <!--        <camel-version>3.4.3</camel-version>-->
+
         <slf4j.version>1.7.26</slf4j.version>
-        <vaadin.version>8.9.0</vaadin.version>
-
-        <maven-bundle-plugin.version>4.1.0</maven-bundle-plugin.version>
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-
-        <karaf-maven-plugin.version>4.2.8</karaf-maven-plugin.version>
-
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <bcprov.version>1.56</bcprov.version>
-        <commonsio.version>2.6</commonsio.version>
-        <commonscodec.version>1.12</commonscodec.version>
-        <commonscollection4.version>4.3</commonscollection4.version>
-        <univosity.version>2.8.2</univosity.version>
 
-        <kryo.version>5.0.0-RC4</kryo.version>
-        <minlog.version>1.3.0</minlog.version>
+        <maven.compiler.release>8</maven.compiler.release>
+        <javax.xml.bind.version>2.2.7</javax.xml.bind.version>
+        <javax.activation.version>1.2.0</javax.activation.version>
+        <!--        <felix.version>6.0.0</felix.version>-->
+        <!--        <felix.distribution>https://repo1.maven.org/maven2/org/apache/felix/org.apache.felix.main.distribution/${felix.version}/org.apache.felix.main.distribution-${felix.version}.zip</felix.distribution>-->
+        <!--        <felix.home>felix-framework-${felix.version}</felix.home>-->
 
-        <javafaker.version>1.0.1</javafaker.version>
+        <karaf-maven-plugin.version>${karaf.version}</karaf-maven-plugin.version>
+        <maven-bundle-plugin.version>4.2.1</maven-bundle-plugin.version>
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 
-        <sanselan.version>0.97-incubator</sanselan.version>
-
-        <jsoup.version>1.11.3</jsoup.version>
-
-        <richtexttoolbar.version>2.1.0</richtexttoolbar.version>
-
-        <vaadin.components.version>2.0.0.rc2</vaadin.components.version>
-        <atmosphere.version>2.4.30.vaadin1</atmosphere.version>
-
-        <gwt-elemental.version>2.8.2.vaadin2</gwt-elemental.version>
-        <gentyref.version>1.2.0.vaadin1</gentyref.version>
-        <vaadin.external.slf4j.version>1.6.1</vaadin.external.slf4j.version>
-        <ph-css.version>6.1.1</ph-css.version>
-        <ph-commons.version>9.2.1</ph-commons.version>
-        <javax.servlet-api.version>3.1.0</javax.servlet-api.version>
-        <byte-buddy.version>1.9.8</byte-buddy.version>
-        <gentyref.version>1.2.0.vaadin1</gentyref.version>
-
-        <!--        <qnenet.version>1.0-SNAPSHOT</qnenet.version>-->
-        <vcard.version>0.10.5</vcard.version>
     </properties>
 
 
