--- a/qvideochannel/pom.xml
+++ b/qvideochannel/pom.xml
@@ -11,13 +11,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.qnenet.qneav</groupId>
-    <artifactId>qavailablemediadevices</artifactId>
+    <artifactId>qvideochannel</artifactId>
     <packaging>bundle</packaging>
 
-    <name>QNEAV :: QAvailableMediaDevices</name>
+    <name>QNEAV :: QVideoChannel</name>
 
     <description>
-        qavailablemediadevices OSGi bundle project.
+        qvideochannel OSGi bundle project.
     </description>
 
 
@@ -59,10 +59,10 @@
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>
-                            net.qnenet.qneav.qavailablemediadevices.api*;version=${project.version}
+                            net.qnenet.qneav.qvideochannel.api*;version=${project.version}
                         </Export-Package>
                         <Private-Package>
-                            net.qnenet.qneav.qavailablemediadevices.provider*;version=${project.version}
+                            net.qnenet.qneav.qvideochannel.provider*;version=${project.version}
                         </Private-Package>
                         <Import-Package>
                             *
